tests/positive/rule3_average.safe
-- Test: rule3_average
-- Description: Average-style division with a provably nonzero divisor.
--   Dividing by the literal 2 is always safe, so there is no division-by-zero risk.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Expected: ACCEPT

package Safe_Average is

   type Measurement is range 0 to 10_000;

   --  Compute_Average: divide by a fixed nonzero literal.
   function Compute_Average (Total : Measurement) returns Measurement is
   begin
      return Measurement (Total / 2);
   end Compute_Average;

end Safe_Average;
